fixed all alignment issues

--- a/style/style.css
+++ b/style/style.css
@@ -132,6 +132,9 @@ color: #563d7c;
   max-width:50%;
   height:50%;
   border-radius: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 footer {
